backend/backend-worker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
