backend/backend-worker/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    nginx.ingress.k8s.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: backend.anial.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
